Fixed Add IssueRecord bug